expense_tracker_nfs_static_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: expense-tracker
  name: expense-tracker-deployment
  labels:
    app: expense-tracker-deployment
  annotations:
    kubernetes.io/change-cause: Trying kubernetes deployment for web change cause 1
spec:
  replicas: 1
  revisionHistoryLimit: 5
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 50%
  #     maxUnavailable: 50%
  selector:
    matchLabels:
      app: expense-tracker-deployment
  template:
    metadata:
      labels:
        app: expense-tracker-deployment
    spec:
      containers:
      - name: expense-tracker-deployment
        image: nischalstha/expense_tracker_web:good
        command: ["sh", "/code/docker-entrypoint.sh" ]
        ports:
        - containerPort: 8000
---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: expense-tracker
  name: expense-tracker-celery-deployment
  labels:
    app: expense-tracker-celery-deployment
  annotations:
    kubernetes.io/change-cause: Trying kubernetes deployment for celery change cause 1
spec:
  replicas: 1
  revisionHistoryLimit: 5
  # strategy:
  #   type: RollingUpdate
  #   rollingUpdate:
  #     maxSurge: 1
  #     maxUnavailable: 1
  selector:
    matchLabels:
      app: expense-tracker-celery-deployment
  template:
    metadata:
      labels:
        app: expense-tracker-celery-deployment
    spec:
      containers:
      - name: expense-tracker-celery-deployment
        image: nischalstha/expense_tracker_web:good
        command: ["sh", "/code/celery.sh" ]
        # ports:
        # - containerPort: 8000
