expense_tracker_nfs_static_files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-tracker-ingress
  namespace: expense-tracker
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
  #   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: "exp-admin.shrestha-nischal.com.np"
    http:
      paths:
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: expense-tracker-service
      #       port:
      #         number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      # - path: /static/
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: nginx-service
      #       port:
      #         number: 80
      # - path: /mero-test/
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: nginx-service
      #       port:
      #         number: 80
  # - host: "expensetracker.com"
  #   http:
  #     paths:
  #     - path: /
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: expense-tracker-frontend-service
  #           port:
  #             number: 8000
  #     - path: "/api/"
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: expense-tracker-service
  #           port:
  #             number: 8000
  #     - path: "/admin/"
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: expense-tracker-service
  #           port:
  #             number: 8000
      #it only works in build from naxa templates as there is no static path 
      # - path: "/static/" # doesnot work because of frontend static path # can be solved by changing STATIC_URL in django settings.py
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: expense-tracker-service
      #       port:
      #         number: 8000
